tests/ui/err-01.stderr
error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-01.rs:39:12
   |
38 | fn iffy() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
39 |     Err(Fatal)?
   |     ----------^ the trait `From<Fatal>` is not implemented for `Kaboom`
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Fatal>`
   |
note: `Kaboom` needs to implement `From<Fatal>`
  --> tests/ui/err-01.rs:29:1
   |
29 | enum Kaboom {
   | ^^^^^^^^^^^
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
help: the trait `From<Fatal>` is not implemented for `Kaboom`
      but trait `From<Bobo>` is implemented for it
  --> tests/ui/err-01.rs:28:1
   |
28 | #[fatality]
   | ^^^^^^^^^^^
   = help: for that trait implementation, expected `Bobo`, found `Fatal`
   = note: this error originates in the derive macro `::fatality::thiserror::Error` (in Nightly builds, run with -Z macro-backtrace for more info)
